--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body {
     box-sizing: border-box;
 }
 svg {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     /* object-fit: cover; */
 }
 .wrapper {
