--- a/style.css
+++ b/style.css
@@ -2,18 +2,49 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    position: relative;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 * {
     box-sizing: border-box;
 }
+.wrapper {
+    min-width: 100vw;
+    min-height: 100vh;
+}
 svg {
-    width: 100vw;
-    height: 100vh;
+    min-width: 100%;
+    min-height: 100%;
+    position: relative;
     /* object-fit: cover; */
 }
-.wrapper {
-    /* width: 100vw; */
-    /* height: 100vh; */
-    /* overflow: hidden; */
-    /* position: relative; */
+.desc-window {
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    width: 20%;
+    color: #FFF;
+    background: #364461;
+    border-radius: 15px;
+    padding: 5px 10px 20px;
+}
+.filter-window {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    width: 15%;
+    /* height: 200px; */
+    background: #364461;
+    border: 1px solid #000;
+    padding: 5px 10px 20px;
+    color: #FFF;
+    border-radius: 15px;
+}
+.filter-window h2 {
+    text-align: center;
+}
+.filter-window label {
+    display: block;
+    font-size: 18px;
+    margin: 15px 0;
 }
