--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ svg {
     position: fixed;
     top: 15px;
     left: 15px;
-    width: 20%;
+    width: 25%;
     color: #FFF;
     background: #364461;
     border-radius: 15px;
@@ -43,6 +43,12 @@ svg {
     top: 5px;
     cursor: pointer;
 }
+.filter-window span{
+    position: absolute;
+    right: 10px;
+    top: 4px;
+    cursor: pointer;
+}
 .filter-window {
     position: fixed;
     top: 15px;
@@ -54,6 +60,11 @@ svg {
     padding: 5px 10px 20px;
     color: #FFF;
     border-radius: 15px;
+}
+.filter-window.__hidden {
+    height: 32px;
+    width: 30px;
+    overflow: hidden;
 }
 .filter-window h2 {
     text-align: center;
@@ -82,4 +93,8 @@ svg {
 } */
 g.pin.__disabled {
     display: none;
+}
+.cont {
+    max-height: 90vh;
+    overflow-y: auto;
 }
